# Paddlingen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  config.py  index.html  init_db.py  main.py  pyproject.toml  requirements.txt  run.py  script.js  styles.css  test.py  wsgi.py
.github/workflows/: ci.yml  pydocstyle.yml
app/: __init__.py  routes.py
app/templates/: index.html
app/util/: booking_groups.py  checkout_preparation.py  db_models.py  event_settings.py  helper_functions.py  stripe_helpers.py  stripe_webhooks.py
data/: previous_year_images.json
docs/: Roadmap.md  TechnicalOverview.md  deployment.md  dev_doc.md  temp_refactor_checklist.md  wsl.md
docs/dev/: dev_coolify.md  dev_database.md  dev_docker.md  dev_ngrok.md  dev_overview.md  dev_stripe.md  dev_testing.md  dev_webdev_tips.md
docs/roadmaps/: README.md  backend_roadmap.md  frontend_roadmap.md  misc_roadmap.md
migrations/: env.py  script.py.mako
migrations/versions/: 2d3e4f5a6b7c_add_public_site_access_settings.py  (+7 more)
pip_files/: requirements-dev.txt  requirements.txt
scripts/: sync_previous_year_image_metadata.py
templates/: admin.html  index.html  login.html  payment_confirmation.html  payment_return.html  public_lock.html
tests/: __init__.py  conftest.py  test_admin_crud.py  test_api.py  test_auth.py  test_booking_groups.py  test_checkout_preparation.py  test_cli.py  test_config.py  test_models.py  test_previous_year_image_sync.py  test_public.py  test_stripe_helpers.py
util/: db_models.py  helper_functions.py
(+21 files in other folders)
